# PanACoTA

./: .gitignore  .gitlab-ci.yml  CONTRIBUTORS.md  COPYRIGHT  MANIFEST.in  README-pythoncode.md  README.md  README.txt  Singularity  annote_pipeline-SGE.sh  annote_pipeline.sh  check_gembase.sh  check_prokka_run.sh  make  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tblToLst.awk  test_log_multiproc-thread.py  titles.txt  uninstall-install.sh
Examples/: README-examples.md
Examples/1-res-Annotate-prodigal/: LSTINFO-list_genomes.lst  PanACoTA-annotate_list_genomes.log.details  discarded-list_genomes.lst
LICENCE-files/: avis-licence.txt  example-header.txt.md  list-source-files.txt
PanACoTA/: __init__.py  utils.py  utils_argparse.py  utils_pangenome.py
containers/: Dockerfile  Dockerfile-1.2.0  Dockerfile-v1.2.0  Singularity  Singularity.1.0  Singularity.1.0.1  Singularity.simple  panacota-singularity.def
docker/: Dockerfile
genomeAPCAT/: __init__.py  utils.py  utils_pangenome.py
old_scripts/: prokka-SGE.sh  readme.md  run_prokka-SGE.sh
pythoncode/: README.md  index.html  install_requires.txt  make.py  requirements.txt  setup.cfg  setup.py
res_pangenome/: PanGenome-GENO3.All.prt-clust-0.8-mode1-th10_2017-06-28_15-25-23.tsv.lst.quali.txt  PanGenome-GENO3.All.prt-clust-0.8-mode1-th10_2017-06-28_15-25-23.tsv.lst.quanti.txt  PersGenome_PanGenome-GENO3.All.prt-clust-0.8-mode1-th10_2017-06-28_15-25-23.tsv.lst_0.95.lst
scripts/: generate_gembase.sh  post_pipeline.sh  prepare_sequences.py  prokka_array.sh
test/: __init__.py
(+855 files in other folders)
